# notecard-env-var-manager

./: .gitmodules  CMakeLists.txt  README.md  keywords.txt  library.properties
.github/workflows/: ci.yml
examples/arduino/: NotecardEnvVarManager.c  README.md  arduino.ino
examples/zephyr/: CMakeLists.txt  NotecardEnvVarManager.h  README.md  main.c
non_arduino_examples/: README.md
non_arduino_examples/zephyr/: CMakeLists.txt  README.md  prj.conf
samples/: README.md
samples/zephyr/: README.md  main.c
scripts/: run_unit_tests.sh
src/: NotecardEnvVarCache.c  NotecardEnvVarCache.h  NotecardEnvVarManager.c  NotecardEnvVarManager.h  defs.h  log.c  log.h
test/: CMakeLists.txt
test/src/: NotecardEnvVarCache_test.cpp  NotecardEnvVarManager_test.cpp
